All but Authentication (Register/Login)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "type-check": "tsc --noEmit",
+    "dev:strict": "concurrently \"npm run dev\" \"npm run type-check -- --watch\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,14 +16,17 @@
     "@hookform/resolvers": "^4.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.1",
+    "@stripe/stripe-js": "^5.7.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookies-next": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lib": "^5.1.0",
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -29,7 +34,8 @@
     "react-icons": "^5.5.0",
     "stripe": "^17.7.0",
     "ts-node": "^10.9.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -37,6 +43,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
